src_old/objects/ServiceQuestion__c.object
<CustomObject>
    <description>Service Question relates one or more Questions to a Service and defines how the questions are rendered when building a Project Service. Service Question is related to Service, Question, and Project Service Question.</description>
    <fields>
        <fullName>CanRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HintLock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HintLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleToClient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To hide a question from Supplier</description>
        <inlineHelpText>To hide a question from Supplier</inlineHelpText>
        <label>Is Visible to Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemQuestion__c</fullName>
        <formula>Question__r.ItemQuestion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JumpToAction__c</fullName>
        <label>JumpTo Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUESTION</fullName>
                </value>
                <value>
                    <fullName>CONTINUE</fullName>
                </value>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>BRANCH</fullName>
                </value>
                <value>
                    <fullName>ENDOFSURVEY</fullName>
                    <isActive>false</isActive>
                    <label>ENDOFSURVEY</label>
                </value>
                <value>
                    <fullName>NEXTTARGET</fullName>
                    <isActive>false</isActive>
                    <label>NEXTTARGET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxValue__c</fullName>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinValue__c</fullName>
        <label>Min Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofDefinedResponses__c</fullName>
        <label>Number of Defined Responses</label>
        <summaryFilterItems>
            <field>ServiceQuestionDefinedResponse__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceQuestionDefinedResponse__c.ServiceQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJumps__c</fullName>
        <label>Number of Jumps</label>
        <summaryFilterItems>
            <field>ServiceQuestionDefinedResponse__c.JumpToAction__c</field>
            <operation>equals</operation>
            <value>QUESTION</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceQuestionDefinedResponse__c.ServiceQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentServiceQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Service Question</label>
        <referenceTo>ServiceQuestion__c</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>ParentServiceQuestionID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionHint__c</fullName>
        <label>Question Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionIndentationLevel__c</fullName>
        <formula>LEN( QuestionIndentation__c )-LEN(SUBSTITUTE(QuestionIndentation__c 
, &apos;.&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuestionIndentationLevel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionIndentation__c</fullName>
        <label>Question Indentation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionNumber__c</fullName>
        <label>Question Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <formula>Question__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <formula>TEXT(Question__r.QuestionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service Questions</relationshipLabel>
        <relationshipName>Service_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Test</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>For Test</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{00000000}</displayFormat>
        <label>Service Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BranchingQuestionCannotBeOptional</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(QuestionType__c == &apos;Single-Select List&apos;,QuestionType__c == &apos;Yes/No&apos; ), ISPICKVAL(JumpToAction__c, &apos;BRANCH&apos;), Optional__c )</errorConditionFormula>
        <errorMessage>Branching question cannot be optional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExceptionQuestionCannotBeOptional</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Question__r.ExceptionQuestion__c,Optional__c)</errorConditionFormula>
        <errorMessage>Exception Question cannot be optional</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validateOneActiveResponse</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( NOT(ISNEW()), NumberofDefinedResponses__c &lt; 2, OR(QuestionType__c == &apos;Single-Select List&apos;,QuestionType__c ==&apos;Multi-Select List&apos; ))</errorConditionFormula>
        <errorMessage>There should be at least two (2) active Defined Responses for this question.</errorMessage>
    </validationRules>
</CustomObject>